--- a/404.html
+++ b/404.html
@@ -12,25 +12,25 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="">
-<meta property="og:url" content="https://example.com/404.html">
-<meta property="og:image" content="https://example.com/images/">
-<link rel="canonical" href="https://example.com/404.html">
+<meta property="og:url" content="https://dnd-qodqks.github.io/404.html">
+<meta property="og:image" content="https://dnd-qodqks.github.io/images/">
+<link rel="canonical" href="https://dnd-qodqks.github.io/404.html">
 
-<link rel="apple-touch-icon" sizes="180x180" href='https://example.com/images/icons/apple-touch-icon.png'>
-<link rel="icon" type="image/png" sizes="32x32" href='https://example.com/images/icons/favicon-32x32.png'>
-<link rel="icon" type="image/png" sizes='16x16' href='https://example.com/images/icons/favicon-16x16.png'>
-<link rel="manifest" href='https://example.com/images/icons/site.webmanifest'>
+<link rel="apple-touch-icon" sizes="180x180" href='https://dnd-qodqks.github.io/images/icons/apple-touch-icon.png'>
+<link rel="icon" type="image/png" sizes="32x32" href='https://dnd-qodqks.github.io/images/icons/favicon-32x32.png'>
+<link rel="icon" type="image/png" sizes='16x16' href='https://dnd-qodqks.github.io/images/icons/favicon-16x16.png'>
+<link rel="manifest" href='https://dnd-qodqks.github.io/images/icons/site.webmanifest'>
 
-<link rel="stylesheet" href="https://example.com/css/styles.60e73209c9c94cbf18ade7ad35b74178cfa4a6d6e173985fce88cd4658a0fb12613f8892eb2669cef72fbfcf8bc1c4fb1331e816f6a967e12528ec34f551dab9.css" integrity="sha512-YOcyCcnJTL8YreetNbdBeM&#43;kptbhc5hfzojNRlig&#43;xJhP4iS6yZpzvcvv8&#43;LwcT7EzHoFvapZ&#43;ElKOw09VHauQ==">
+<link rel="stylesheet" href="https://dnd-qodqks.github.io/css/styles.60e73209c9c94cbf18ade7ad35b74178cfa4a6d6e173985fce88cd4658a0fb12613f8892eb2669cef72fbfcf8bc1c4fb1331e816f6a967e12528ec34f551dab9.css" integrity="sha512-YOcyCcnJTL8YreetNbdBeM&#43;kptbhc5hfzojNRlig&#43;xJhP4iS6yZpzvcvv8&#43;LwcT7EzHoFvapZ&#43;ElKOw09VHauQ==">
 </head>
 
   <body>
     <div class="nav-drop">
   <div class="nav-body">
-      <a href="https://example.com/about/" class="nav_item">About</a>
-      <a href="https://example.com/categories" class="nav_item">Project</a>
-      <a href="https://example.com/trouble_shooting" class="nav_item">Trouble Shooting</a>
-      <a href="https://example.com/tags" class="nav_item">Tag</a>
+      <a href="https://dnd-qodqks.github.io/about/" class="nav_item">About</a>
+      <a href="https://dnd-qodqks.github.io/categories" class="nav_item">Project</a>
+      <a href="https://dnd-qodqks.github.io/trouble_shooting" class="nav_item">Trouble Shooting</a>
+      <a href="https://dnd-qodqks.github.io/tags" class="nav_item">Tag</a>
     <div class="nav-close"></div><div class="color_mode">
   <label for="mode">Toggle Dark Mode</label>
   <input type="checkbox" class="color_choice" id="mode">
@@ -40,7 +40,7 @@
 </div>
 <header class="nav">
   <nav class="nav-menu">
-    <a href=https://example.com/ class="nav-brand nav_item">
+    <a href=https://dnd-qodqks.github.io/ class="nav-brand nav_item">
         dnd-qodqks&#39;s blog</a>
     <div class="nav_bar-wrap">
       <div class="nav_bar"></div>
@@ -63,7 +63,7 @@
 </footer>
 
 
-<script src="https://example.com/js/index.min.c2696e675ff370f5b147ef0c72b4c6c23212bce7266a2cca9a699de72e897a82690f404a01fdedd4ec48bb079177f679a3a2559d7c6bbaac4cbbb9f9afcf547a.js"></script>
+<script src="https://dnd-qodqks.github.io/js/index.min.cf80254cf65a34a83eca54050063ea1a4fe5af81a6a8e40c06d495ebc3dbc32e5fc89cc248fb3c3acacbb1a5a9f34394a96807b83164a134d52deff58a30a7e5.js"></script>
 
     <svg width="0" height="0" class="hidden">
   <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 699.428 699.428" id="copy">
