--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
     <main>
       
 <div class="wrap pt-2 mt-2">
+  
+  <article class="article mb-2">
+    <a href=https://dnd-qodqks.github.io/posts/test/  class=grid-reverse >
+      <div class=article_thumb style='background-image: url(https://dnd-qodqks.github.io/images/logo1.png)'></div>
+      <div class="article_meta  center_y ">
+        <time class="post_date">October 31, 2024</time>
+        <h3 class="article_title">Test</h3>
+        <div class="article_excerpt  visible ">
+        <p><p>안녕하세요. 웅뱅반입니다.</p></p>
+        </div>
+      </div>
+    </a>
+  </article><div class="grid-2 article_showcase">
 </div>
 <a href='https://dnd-qodqks.github.io/posts/' class=post_nav><span class=post_next>View Archive
   <svg class="icon icon_scale">
